...
            image: DecorationImage(
              image: AssetImage('assets/images/clouds_bottom_smaller.png'),
              fit: BoxFit.cover,
            ),
          ),
          child: Scaffold(
            key: const Key('tootFairyScreen'),
            extendBodyBehindAppBar: true,
            backgroundColor: Colors.transparent,
            appBar: AppBar(
              automaticallyImplyLeading: false,
              iconTheme: const IconThemeData(color: _backgroundColor),
              backgroundColor: Colors.transparent,
              surfaceTintColor: Colors.transparent,
              scrolledUnderElevation: 0,
              centerTitle: true,
              toolbarHeight: 64,
              elevation: 0,
              leading: IconButton(
                key: const Key('tootFairyBackButton'),
                icon: const Icon(Icons.arrow_back),
                color: _backgroundColor,
                onPressed: () {
                  unawaited(_playButtonSound());
                  final navigator = Navigator.of(context);
                  if (navigator.canPop()) {
...
